--- a/index.html
+++ b/index.html
@@ -17,8 +17,122 @@
     <button id="pause">Pause</button>
     <button id="stop">Stop</button>
     <select id="recitations">
-      <option value="recitation1.mp3">Recitation 1</option>
-      <option value="recitation2.mp3">Recitation 2</option>
+      <option value="">Chapter 1</option>
+      <option value="">Chapter 2</option>
+      <option value="">Chapter 3</option>
+      <option value="">Chapter 4</option>
+      <option value="">Chapter 5</option>
+      <option value="">Chapter 6</option>
+      <option value="">Chapter 7</option>
+      <option value="">Chapter 8</option>
+      <option value="">Chapter 9</option>
+      <option value="">Chapter 10</option>
+      <option value="">Chapter 11</option>
+      <option value="">Chapter 12</option>
+      <option value="">Chapter 13</option>
+      <option value="">Chapter 14</option>
+      <option value="">Chapter 15</option>
+      <option value="">Chapter 16</option>
+      <option value="">Chapter 17</option>
+      <option value="">Chapter 18</option>
+      <option value="">Chapter 19</option>
+      <option value="">Chapter 20</option>
+      <option value="">Chapter 21</option>
+      <option value="">Chapter 22</option>
+      <option value="">Chapter 23</option>
+      <option value="">Chapter 24</option>
+      <option value="">Chapter 25</option>
+      <option value="">Chapter 26</option>
+      <option value="">Chapter 27</option>
+      <option value="">Chapter 28</option>
+      <option value="">Chapter 29</option>
+      <option value="">Chapter 30</option>
+      <option value="">Chapter 31</option>
+      <option value="">Chapter 32</option>
+      <option value="">Chapter 33</option>
+      <option value="">Chapter 34</option>
+      <option value="">Chapter 35</option>
+      <option value="">Chapter 36</option>
+      <option value="">Chapter 37</option>
+      <option value="">Chapter 38</option>
+      <option value="">Chapter 39</option>
+      <option value="">Chapter 40</option>
+      <option value="">Chapter 41</option>
+      <option value="">Chapter 42</option>
+      <option value="">Chapter 43</option>
+      <option value="">Chapter 44</option>
+      <option value="">Chapter 45</option>
+      <option value="">Chapter 46</option>
+      <option value="">Chapter 47</option>
+      <option value="">Chapter 48</option>
+      <option value="">Chapter 49</option>
+      <option value="">Chapter 50</option>
+      <option value="">Chapter 51</option>
+      <option value="">Chapter 52</option>
+      <option value="">Chapter 53</option>
+      <option value="">Chapter 54</option>
+      <option value="">Chapter 55</option>
+      <option value="">Chapter 56</option>
+      <option value="">Chapter 57</option>
+      <option value="">Chapter 58</option>
+      <option value="">Chapter 59</option>
+      <option value="">Chapter 60</option>
+      <option value="">Chapter 61</option>
+      <option value="">Chapter 62</option>
+      <option value="">Chapter 63</option>
+      <option value="">Chapter 64</option>
+      <option value="">Chapter 65</option>
+      <option value="">Chapter 66</option>
+      <option value="">Chapter 67</option>
+      <option value="">Chapter 68</option>
+      <option value="">Chapter 69</option>
+      <option value="">Chapter 70</option>
+      <option value="">Chapter 71</option>
+      <option value="">Chapter 72</option>
+      <option value="">Chapter 73</option>
+      <option value="">Chapter 74</option>
+      <option value="">Chapter 75</option>
+      <option value="">Chapter 76</option>
+      <option value="">Chapter 77</option>
+      <option value="">Chapter 78</option>
+      <option value="">Chapter 79</option>
+      <option value="">Chapter 80</option>
+      <option value="">Chapter 81</option>
+      <option value="">Chapter 82</option>
+      <option value="">Chapter 83</option>
+      <option value="">Chapter 84</option>
+      <option value="">Chapter 85</option>
+      <option value="">Chapter 86</option>
+      <option value="">Chapter 87</option>
+      <option value="">Chapter 88</option>
+      <option value="">Chapter 89</option>
+      <option value="">Chapter 90</option>
+      <option value="">Chapter 91</option>
+      <option value="">Chapter 92</option>
+      <option value="">Chapter 93</option>
+      <option value="">Chapter 94</option>
+      <option value="">Chapter 95</option>
+      <option value="">Chapter 96</option>
+      <option value="">Chapter 97</option>
+      <option value="">Chapter 98</option>
+      <option value="">Chapter 99</option>
+      <option value="">Chapter 100</option> 
+      <option value="">Chapter 101</option>
+      <option value="">Chapter 102</option>
+      <option value="">Chapter 103</option>
+      <option value="">Chapter 104</option>
+      <option value="">Chapter 105</option>
+      <option value="">Chapter 106</option>
+      <option value="">Chapter 107</option>
+      <option value="">Chapter 108</option>
+      <option value="">Chapter 109</option>
+      <option value="">Chapter 110</option>
+      <option value="">Chapter 111</option>
+      <option value="">Chapter 112</option>
+      <option value="">Chapter 113</option>
+      <option value="">Chapter 114</option>
+      
+      
     </select>
   </div>
 </div>
