--- a/index.html
+++ b/index.html
@@ -8,137 +8,151 @@
 </head>
 <body>
 <div class="container">
-  <h1>Quran Player</h1>
+  <h1 id="H1">Quran Player</h1>
   <audio id="audio" controls>
-    <source src="recitation.mp3" type="audio/mp3">
+    <source id="audiosource" src="" type="audio/mp3">
   </audio>
   <div class="controls">
-    <button id="play">Play</button>
-    <button id="pause">Pause</button>
-    <button id="stop">Stop</button>
+    <label for="">Select Chapter</label>
     <select id="recitations">
-      <option value="">Chapter 1</option>
-      <option value="">Chapter 2</option>
-      <option value="">Chapter 3</option>
-      <option value="">Chapter 4</option>
-      <option value="">Chapter 5</option>
-      <option value="">Chapter 6</option>
-      <option value="">Chapter 7</option>
-      <option value="">Chapter 8</option>
-      <option value="">Chapter 9</option>
-      <option value="">Chapter 10</option>
-      <option value="">Chapter 11</option>
-      <option value="">Chapter 12</option>
-      <option value="">Chapter 13</option>
-      <option value="">Chapter 14</option>
-      <option value="">Chapter 15</option>
-      <option value="">Chapter 16</option>
-      <option value="">Chapter 17</option>
-      <option value="">Chapter 18</option>
-      <option value="">Chapter 19</option>
-      <option value="">Chapter 20</option>
-      <option value="">Chapter 21</option>
-      <option value="">Chapter 22</option>
-      <option value="">Chapter 23</option>
-      <option value="">Chapter 24</option>
-      <option value="">Chapter 25</option>
-      <option value="">Chapter 26</option>
-      <option value="">Chapter 27</option>
-      <option value="">Chapter 28</option>
-      <option value="">Chapter 29</option>
-      <option value="">Chapter 30</option>
-      <option value="">Chapter 31</option>
-      <option value="">Chapter 32</option>
-      <option value="">Chapter 33</option>
-      <option value="">Chapter 34</option>
-      <option value="">Chapter 35</option>
-      <option value="">Chapter 36</option>
-      <option value="">Chapter 37</option>
-      <option value="">Chapter 38</option>
-      <option value="">Chapter 39</option>
-      <option value="">Chapter 40</option>
-      <option value="">Chapter 41</option>
-      <option value="">Chapter 42</option>
-      <option value="">Chapter 43</option>
-      <option value="">Chapter 44</option>
-      <option value="">Chapter 45</option>
-      <option value="">Chapter 46</option>
-      <option value="">Chapter 47</option>
-      <option value="">Chapter 48</option>
-      <option value="">Chapter 49</option>
-      <option value="">Chapter 50</option>
-      <option value="">Chapter 51</option>
-      <option value="">Chapter 52</option>
-      <option value="">Chapter 53</option>
-      <option value="">Chapter 54</option>
-      <option value="">Chapter 55</option>
-      <option value="">Chapter 56</option>
-      <option value="">Chapter 57</option>
-      <option value="">Chapter 58</option>
-      <option value="">Chapter 59</option>
-      <option value="">Chapter 60</option>
-      <option value="">Chapter 61</option>
-      <option value="">Chapter 62</option>
-      <option value="">Chapter 63</option>
-      <option value="">Chapter 64</option>
-      <option value="">Chapter 65</option>
-      <option value="">Chapter 66</option>
-      <option value="">Chapter 67</option>
-      <option value="">Chapter 68</option>
-      <option value="">Chapter 69</option>
-      <option value="">Chapter 70</option>
-      <option value="">Chapter 71</option>
-      <option value="">Chapter 72</option>
-      <option value="">Chapter 73</option>
-      <option value="">Chapter 74</option>
-      <option value="">Chapter 75</option>
-      <option value="">Chapter 76</option>
-      <option value="">Chapter 77</option>
-      <option value="">Chapter 78</option>
-      <option value="">Chapter 79</option>
-      <option value="">Chapter 80</option>
-      <option value="">Chapter 81</option>
-      <option value="">Chapter 82</option>
-      <option value="">Chapter 83</option>
-      <option value="">Chapter 84</option>
-      <option value="">Chapter 85</option>
-      <option value="">Chapter 86</option>
-      <option value="">Chapter 87</option>
-      <option value="">Chapter 88</option>
-      <option value="">Chapter 89</option>
-      <option value="">Chapter 90</option>
-      <option value="">Chapter 91</option>
-      <option value="">Chapter 92</option>
-      <option value="">Chapter 93</option>
-      <option value="">Chapter 94</option>
-      <option value="">Chapter 95</option>
-      <option value="">Chapter 96</option>
-      <option value="">Chapter 97</option>
-      <option value="">Chapter 98</option>
-      <option value="">Chapter 99</option>
-      <option value="">Chapter 100</option> 
-      <option value="">Chapter 101</option>
-      <option value="">Chapter 102</option>
-      <option value="">Chapter 103</option>
-      <option value="">Chapter 104</option>
-      <option value="">Chapter 105</option>
-      <option value="">Chapter 106</option>
-      <option value="">Chapter 107</option>
-      <option value="">Chapter 108</option>
-      <option value="">Chapter 109</option>
-      <option value="">Chapter 110</option>
-      <option value="">Chapter 111</option>
-      <option value="">Chapter 112</option>
-      <option value="">Chapter 113</option>
-      <option value="">Chapter 114</option>
+      <option value="">--</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/1.mp3">Chapter 1</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/2.mp3">Chapter 2</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/3.mp3">Chapter 3</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/4.mp3">Chapter 4</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/5.mp3">Chapter 5</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/6.mp3">Chapter 6</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/7.mp3">Chapter 7</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/8.mp3">Chapter 8</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/9.mp3">Chapter 9</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/10.mp3">Chapter 10</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/11.mp3">Chapter 11</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/12.mp3">Chapter 12</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/13.mp3">Chapter 13</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/14.mp3">Chapter 14</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/15.mp3">Chapter 15</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/16.mp3">Chapter 16</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/17.mp3">Chapter 17</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/18.mp3">Chapter 18</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/19.mp3">Chapter 19</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/20.mp3">Chapter 20</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/21.mp3">Chapter 21</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/22.mp3">Chapter 22</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/23.mp3">Chapter 23</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/24.mp3">Chapter 24</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/25.mp3">Chapter 25</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/26.mp3">Chapter 26</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/27.mp3">Chapter 27</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/28.mp3">Chapter 28</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/29.mp3">Chapter 29</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/30.mp3">Chapter 30</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/31.mp3">Chapter 31</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/32.mp3">Chapter 32</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/33.mp3">Chapter 33</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/34.mp3">Chapter 34</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/35.mp3">Chapter 35</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/36.mp3">Chapter 36</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/37.mp3">Chapter 37</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/38.mp3">Chapter 38</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/39.mp3">Chapter 39</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/40.mp3">Chapter 40</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/41.mp3">Chapter 41</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/42.mp3">Chapter 42</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/43.mp3">Chapter 43</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/44.mp3">Chapter 44</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/45.mp3">Chapter 45</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/46.mp3">Chapter 46</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/47.mp3">Chapter 47</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/48.mp3">Chapter 48</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/49.mp3">Chapter 49</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/50.mp3">Chapter 50</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/51.mp3">Chapter 51</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/52.mp3">Chapter 52</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/53.mp3">Chapter 53</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/54.mp3">Chapter 54</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/55.mp3">Chapter 55</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/56.mp3">Chapter 56</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/57.mp3">Chapter 57</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/58.mp3">Chapter 58</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/59.mp3">Chapter 59</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/60.mp3">Chapter 60</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/61.mp3">Chapter 61</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/62.mp3">Chapter 62</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/63.mp3">Chapter 63</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/64.mp3">Chapter 64</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/65.mp3">Chapter 65</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/66.mp3">Chapter 66</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/67.mp3">Chapter 67</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/68.mp3">Chapter 68</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/69.mp3">Chapter 69</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/70.mp3">Chapter 70</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/71.mp3">Chapter 71</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/72.mp3">Chapter 72</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/73.mp3">Chapter 73</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/74.mp3">Chapter 74</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/75.mp3">Chapter 75</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/76.mp3">Chapter 76</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/77.mp3">Chapter 77</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/78.mp3">Chapter 78</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/79.mp3">Chapter 79</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/80.mp3">Chapter 80</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/81.mp3">Chapter 81</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/82.mp3">Chapter 82</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/83.mp3">Chapter 83</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/84.mp3">Chapter 84</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/85.mp3">Chapter 85</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/86.mp3">Chapter 86</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/87.mp3">Chapter 87</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/88.mp3">Chapter 88</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/89.mp3">Chapter 89</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/90.mp3">Chapter 90</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/91.mp3">Chapter 91</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/92.mp3">Chapter 92</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/93.mp3">Chapter 93</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/94.mp3">Chapter 94</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/95.mp3">Chapter 95</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/96.mp3">Chapter 96</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/97.mp3">Chapter 97</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/98.mp3">Chapter 98</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/99.mp3">Chapter 99</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/100.mp3">Chapter 100</option> 
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/101.mp3">Chapter 101</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/102.mp3">Chapter 102</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/103.mp3">Chapter 103</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/104.mp3">Chapter 104</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/105.mp3">Chapter 105</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/106.mp3">Chapter 106</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/107.mp3">Chapter 107</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/108.mp3">Chapter 108</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/109.mp3">Chapter 109</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/110.mp3">Chapter 110</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/111.mp3">Chapter 111</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/112.mp3">Chapter 112</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/113.mp3">Chapter 113</option>
+      <option value="https://download.quranicaudio.com/qdc/hani_ar_rifai/murattal/114.mp3">Chapter 114</option>
       
       
     </select>
   </div>
+  <div>
+    <label for="">Select the Qari</label>
+    <select id="qaris">
+      <option value="">--</option>
+      <option value="hani_ar_rifai">Qari Hani ar Rifai</option>
+      <option value="abdul_baset">Qari Abdul Baset</option>
+    </select>
+  </div>
+  <div>
+    <label for="">Customize the Font</label>
+    <select id="fontchanger">
+      <option value="">Impact</option>
+      <option value="Arial">Arial</option>
+      <option value="Times New Roman">Times New Roman</option>
+      <option value="Calibri">Calibri</option>
+    </select>
+  </div>
 </div>
-<select id="qaris">
-    <option value="">Select a Qari</option>
-  </select>
+
   
 <script src="script.js"></script>
 </body>
